[package]
name = "coinflow"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "coinflow"
path = "src/main.rs"

[package.metadata]
project-name = "coinflow.rs"

[dependencies]
electrum-client = "0.24.1"
reqwest = { version="0.13.2", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["full"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
